--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="https://peliiiiis.github.io/pelis4kuhd/">Inicio</a></li>
-                    <li><a href="index.html">Informacion</a></li>
+                    <li><a href="https://peliiiiis.github.io/pelis4kuhd-informacion/">Informacion</a></li>
                     <li><a href="index.html">Series</a></li>
                 </ul>
             </nav>
